--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "eslint .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write .",
+    "check": "biome check .",
     "start": "next start",
     "test": "bun test",
     "test:watch": "bun test --watch",
@@ -50,6 +53,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.10",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bun": "latest",
     "@types/node": "^22",
