--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "1.2.4",
     "@tanstack/react-form": "1.27.6",
     "@tanstack/react-query": "5.90.12",
+    "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.20",
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
